--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
+<!--
+-Name: [Alyson Pedley]
+-UnityID: [Ajpedley]
+-Assignment: Guided Lab 4
+-Description: Guided Lab Assignment, about me webpage
+-->
 <html lang="en-US">
 
     <head>
         <meta charset="UTF-8" />
-        <title>My test page</title>
+        <title>About Alyson Pedley</title>
+        <link href="webpagesGL.css" rel="stylesheet" type="text/css" />
     </head>
-    
-    <body>
-    <p>This is my page</p>    
+    <body style="background-color: #008473;">
+
+        <!--Here is our welcome message -->
+        <header>
+            <h2> Welcome to my about me page!</h2>
+        </header>
+
+        <hr />
+        <!--A Photo I like-->
+        <img src="cat.jpg" alt="A photo of a cool cat id="photo-resize">
+    <p>I enjoy the walk from Hillsborough Street to <em>Clark</em> dining hall. It is a 12 minute walk and the sounds of cars driving by is <strong>Peaceful</strong></p>   
+
+    <!--This is the formulas with sub and super script-->
+<p>
+    C<sub>8</sub>H<sub>10</sub>N<sub>2</sub>O<sub>2</sub> Is my favorite <del>element</del> <ins>chemical</ins> formula. E = mc<sup>2</sup> is my favorite equation.
+</p>
+
+    <br />
+    <br />
+<!--These are all things I enjoy-->
+    <h4>A list of my Favorite things</h4>
+
+    <ul>
+        <li>Books</li>
+        <li>Cats</li>
+        <Li>Music</Li>
+        <li>Desserts</li>
+    </ul>
+
+    <br />
+<!--This is a table that will hopefully have a border-->
+    <table class="table border">
+        <tr><th>Name</th> <th>Characteristics</th> </tr>
+        <tr><td>Alyson Pedley</td>Pure Strength<td></td></tr>
+        <tr><td>Makenzie Apple</td>Pure Intelligence<td></td></tr>
+    </table>
+
+<a href="hhtps://wolfware.ncsu.edu" target="blank">Moodle</a>
 
     </body>
 </html>
