--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <!--
--Name: [Alyson Pedley]
--UnityID: [Ajpedley]
+-Name: Alyson Pedley
+-UnityID: Ajpedley
 -Assignment: Guided Lab 4
 -Description: Guided Lab Assignment, about me webpage
 -->
 <html lang="en-US">
-
     <head>
         <meta charset="UTF-8" />
         <title>About Alyson Pedley</title>
         <link href="webpagesGL.css" rel="stylesheet" type="text/css" />
     </head>
     <body style="background-color: #008473;">
-
         <!--Here is our welcome message -->
         <header>
             <h2> Welcome to my about me page!</h2>
